README.pod is generated by dzil from latest.pm.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Alien-ZMQ-latest
-author  = Zakariyya Mughal <zmughal@cpan.org>
+author  = Zakariyya Mughal <zmughal@cpan.org>, (Capability to set version is added by toshifjw@cpan.org)
 license = Perl_5
 copyright_holder = Zakariyya Mughal
 copyright_year   = 2017
